// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack development should add global and entry setup files 1`] = `
Array [
  "webextensions-emulator/lib/core",
  "/global-setup-path",
  "/entry-setup-path",
  "/project/src/index",
]
`;

exports[`webpack development should resolve relative setup path 1`] = `
Array [
  "webextensions-emulator/lib/core",
  "/project/global-setup-path",
  "/project/src/entry-setup-path",
  "/project/src/index",
]
`;

exports[`webpack development snapshots entries with polyfill 1`] = `
Object {
  "background": Array [
    "webextensions-emulator/lib/background",
    "/project/src/background",
  ],
  "content1": Array [
    "webextensions-emulator/lib/core",
    "/project/src/content1/__dev__/setup",
    "/project/src/content1",
  ],
  "content2": Array [
    "webextensions-emulator/lib/core",
    "/project/src/content2",
  ],
  "page": Array [
    "webextensions-emulator/lib/core",
    "/project/src/page",
  ],
  "pageless": Array [
    "webextensions-emulator/lib/core",
    "/project/src/pageless",
  ],
  "popup": Array [
    "webextensions-emulator/lib/core",
    "/project/src/popup",
  ],
}
`;

exports[`webpack development snapshots entries without polyfill 1`] = `
Object {
  "background": Array [
    "webextensions-emulator/lib/background",
    "/project/src/background",
  ],
  "content1": Array [
    "webextensions-emulator/lib/core",
    "/project/src/content1/__dev__/setup",
    "/project/src/content1",
  ],
  "content2": Array [
    "webextensions-emulator/lib/core",
    "/project/src/content2",
  ],
  "page": Array [
    "webextensions-emulator/lib/core",
    "/project/src/page",
  ],
  "pageless": Array [
    "webextensions-emulator/lib/core",
    "/project/src/pageless",
  ],
  "popup": Array [
    "webextensions-emulator/lib/core",
    "/project/src/popup",
  ],
}
`;

exports[`webpack production snapshots entries with polyfill(should also not be injected) 1`] = `
Object {
  "background": Array [
    "/project/src/background",
  ],
  "content1": Array [
    "/project/src/content1",
  ],
  "content2": Array [
    "/project/src/content2",
  ],
  "page": Array [
    "/project/src/page",
  ],
  "pageless": Array [
    "/project/src/pageless",
  ],
  "popup": Array [
    "/project/src/popup",
  ],
}
`;

exports[`webpack production snapshots entries without polyfill(should not be injected) 1`] = `
Object {
  "background": Array [
    "/project/src/background",
  ],
  "content1": Array [
    "/project/src/content1",
  ],
  "content2": Array [
    "/project/src/content2",
  ],
  "page": Array [
    "/project/src/page",
  ],
  "pageless": Array [
    "/project/src/pageless",
  ],
  "popup": Array [
    "/project/src/popup",
  ],
}
`;
